# gtfs-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml  workflow.yml
gtfs_parser/: __init__.py  __main__.py  aggregate.py  gtfs.py  parse.py
tests/: conftest.py  test_aggregator.py  test_gtfs.py  test_parser.py
