[tool.poetry]
name = "gtfs-parser"
version = "0.1.0"
description = ""
authors = ["Kanahiro <mediterranean1769@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gtfs_parser"}]

[tool.poetry.dependencies]
python = ">=3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
