[tool.poetry]
name = "gtfs_parser"
version = "0.1.1"
description = "parse and aggregate GTFS"
authors = ["MIERUNE Inc.", "Kanahiro IGUCHI"]
license = "MIT"
homepage = "https://github.com/MIERUNE"
repository = "https://github.com/MIERUNE/{project-name}"
readme = "README.md"
packages = [{include = "gtfs_parser"}]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = ">=1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gtfs-parser = "gtfs_parser.__main__:main"