[tool.poetry]
name = "gtfs_parser"
version = "0.2.2"
description = "parse and aggregate GTFS"
authors = ["MIERUNE Inc.", "Kanahiro IGUCHI"]
license = "MIT"
homepage = "https://github.com/MIERUNE"
repository = "https://github.com/MIERUNE/gtfs-parser"
readme = "README.md"
packages = [{include = "gtfs_parser"}]

[tool.poetry.dependencies]
python = ">=3.9.0"
pandas = ">=1.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gtfs-parser = "gtfs_parser.__main__:main"